# bevy_audioviz

./: AppIcon.icns  Cargo.toml  Info.plist  LICENSE  README.md  \  export_macos.sh
.context/: BEVY_13_UPGRADE_LOG.md  ROADMAP.md
assets/shaders/: audio_fragment.wgsl  bar_fragment.wgsl  circle_fragment.wgsl  circle_split_fragment.wgsl  polygon_fragment.wgsl  string_fragment.wgsl  wave_fragment.wgsl
exports/linux/assets/shaders/: audio_vertex.wgsl  string_fragment.wgsl
exports/macos/: dmg.sh  icon.sh
exports/macos/BevyAudioviz.app/Contents/: Info.plist
src/: audio_capture.rs  audio_processing.rs  bar_material.rs  cfg.rs  circle_material.rs  circle_split_material.rs  main.rs  materials.rs  polygon_material.rs  string_material.rs  ui.rs  visualization.rs  wave_material.rs
