[package]
name = "bevy_audioviz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11.3" } #, features = ["dynamic_linking"] }
bevy_egui = "0.22.0"
confy = "0.5.1"
#bevy = {git = "https://github.com/bevyengine/bevy.git"}
cpal = "0.15.2"
mpsc = "0.2.3"
rustfft = "6.1.0"
serde = { version = "1.0.190", features = ["derive"] }
spectrum-analyzer = "1.5.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

#[profile.release]
#lto = "thin"
