[package]
name = "bevy_audioviz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13.0", features = ["file_watcher"] }
bevy_egui = "0.25.0"
confy = "0.6.0"
#bevy = {git = "https://github.com/bevyengine/bevy.git"}
cpal = "0.15.2"
mpsc = "0.2.3"
serde = { version = "1.0.195", features = ["derive"] }
spectrum-analyzer = "1.5.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

[target.x86_64-pc-windows-msvc]
linker = "lld"
rustflags = [
  "-Lnative=/home/me/.xwin/crt/lib/x86_64",
  "-Lnative=/home/me/.xwin/sdk/lib/um/x86_64",
  "-Lnative=/home/me/.xwin/sdk/lib/ucrt/x86_64"
]
